# perceptual-hashing

./: Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/handler/: handle.rs  handler.rs  mod.rs  similarity_analyzer.rs
src/hashing/: d_hash.rs  mod.rs  p_hash.rs
src/preprocessing/: preprocessor.rs
src/widgets/: algorithm_chooser.rs  letters.rs  list.rs  mod.rs
